fixed display bug and text align

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,12 @@ html {
 
 body {
   display: flex;
-  background-image: linear-gradient(96.2deg, rgb(255, 230, 112) 10.4%, rgb(255, 100, 100) 43.8%, rgb(0, 93, 219) 105.8%);
+  background-image: linear-gradient(
+    96.2deg,
+    rgb(255, 230, 112) 10.4%,
+    rgb(255, 100, 100) 43.8%,
+    rgb(0, 93, 219) 105.8%
+  );
   justify-content: center;
   align-items: center;
   height: 100vh;
@@ -24,7 +29,7 @@ body {
   color: white;
   width: 16.25rem;
   padding: 0.75rem 1rem;
-  text-align: tight;
+  text-align: end;
   font-size: calc(1rem * 1.2 * 1.2);
 }
 
@@ -37,7 +42,7 @@ body {
     "seven eight nine equal"
     "four five six equal"
     "one two three equal"
-    "zero decimal clear equal" ;
+    "zero decimal clear equal";
 }
 
 .calculatorKeys > button {
@@ -107,7 +112,6 @@ body {
   background: rgb(255, 230, 112);
 }
 
-[data-type="number"]
-[data-type="clear"] {
+[data-type="number"] [data-type="clear"] {
   background-color: white;
 }
